@@ -26,6 +26,7 @@ import stroom.explorer.shared.PermissionInheritance;
 import stroom.importexport.api.ExportSummary;
 import stroom.importexport.api.ImportExportActionHandler;
 import stroom.importexport.api.ImportExportDocumentEventLog;
+import stroom.importexport.api.ImportExportSerializer;
 import stroom.importexport.api.NonExplorerDocRefProvider;
 import stroom.importexport.shared.ImportSettings;
 import stroom.importexport.shared.ImportSettings.ImportMode;
@@ -63,6 +64,7 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Properties;
 import java.util.Set;
@@ -77,7 +79,7 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
 
     private final ExplorerService explorerService;
     private final ExplorerNodeService explorerNodeService;
-    private final ImportExportActionHandlers importExportActionHandlers;
+    private final ImportExportActionHandlersImpl importExportActionHandlers;
     private final SecurityContext securityContext;
     private final ImportExportDocumentEventLog importExportDocumentEventLog;
     private static final byte[] LINE_END_CHAR_BYTES = "\n".getBytes(Charset.defaultCharset());
@@ -85,7 +87,7 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
     @Inject
     ImportExportSerializerImpl(final ExplorerService explorerService,
                                final ExplorerNodeService explorerNodeService,
-                               final ImportExportActionHandlers importExportActionHandlers,
+                               final ImportExportActionHandlersImpl importExportActionHandlers,
                                final SecurityContext securityContext,
                                final ImportExportDocumentEventLog importExportDocumentEventLog) {
         this.explorerService = explorerService;
@@ -183,7 +185,6 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
             // Get the tags.
             final Set<String> tags = explorerService.parseNodeTags(properties.getProperty("tags"));
 
-
             // Create a doc ref.
             final DocRef docRef = new DocRef(type, uuid, name);
             // Create or get the import state.
@@ -258,7 +259,8 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
         final NonExplorerDocRefProvider nonExplorerDocRefProvider =
                 (NonExplorerDocRefProvider) importExportActionHandler;
 
-        final String importPath = resolvePath(path, importSettings);
+        DocRef importRootDocRef = importSettings.getRootDocRef();
+        final String importPath = resolvePath(path, importRootDocRef);
 
         final DocRef ownerDocument = nonExplorerDocRefProvider.getOwnerDocument(docRef, dataMap);
         final Optional<ExplorerNode> existingExplorerNode = explorerNodeService.getNode(ownerDocument);
@@ -321,6 +323,21 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
         return docRef;
     }
 
+    /**
+     * Imports something that appears in the Explorer Tree.
+     * @param importExportActionHandler Handler for the type of DocRef
+     * @param nodeFile Path to the import file on disk
+     * @param docRef DocRef created from the .node data on disk
+     * @param tags List of tags extracted from .node data on disk
+     * @param path Path to the item in the Explorer Tree, from the .node data
+     *             on disk
+     * @param dataMap Map of disk file extension to disk file contents
+     * @param importState State of the import for docRef
+     * @param confirmMap Accessed to remove docRef from the map if the docRef
+     *                   cannot be imported.
+     * @param importSettings Key settings for the import; notably the RootDocRef.
+     * @return The DocRef of the imported document.
+     */
     private DocRef importExplorerDoc(final ImportExportActionHandler importExportActionHandler,
                                      final Path nodeFile,
                                      final DocRef docRef,
@@ -330,7 +347,11 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
                                      final ImportState importState,
                                      final Map<DocRef, ImportState> confirmMap,
                                      final ImportSettings importSettings) {
-        final String importPath = resolvePath(path, importSettings);
+
+        // This shows where the thing is in the Explorer Tree
+        // Uses the importSettings.getRootDocRef() to work out where to put things
+        final DocRef importRootDocRef = importSettings.getRootDocRef();
+        final String importPath = resolvePath(path, importRootDocRef);
 
         String destPath = importPath;
         String destName = docRef.getName();
@@ -343,7 +364,7 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
         if (docExists) {
             // This is a pre-existing item so make sure we are allowed to update it.
             if (!securityContext.hasDocumentPermission(docRef,
-                    DocumentPermission.EDIT)) {
+                                                       DocumentPermission.EDIT)) {
                 throw new PermissionException(securityContext.getUserRef(),
                         "You do not have permission to update '" + docRef + "'");
             }
@@ -370,11 +391,11 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
         DocRef folderRef = null;
         ExplorerNode parentNode = null;
         if (importState.getState() == State.NEW || moving) {
-            // Create a parent folder for the new node.
+            // Create parent folders for the new node.
             final ExplorerNode parent = explorerNodeService.getRoot();
             parentNode = getOrCreateParentFolder(parent,
-                    importPath,
-                    ImportSettings.ok(importSettings, importState));
+                                                 importPath,
+                                                 ImportSettings.ok(importSettings, importState));
 
             // Check permissions on the parent folder.
             folderRef = new DocRef(parentNode.getType(), parentNode.getUuid(), parentNode.getName());
@@ -451,23 +472,36 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
         return docRef;
     }
 
-    private String resolvePath(final String path, final ImportSettings importSettings) {
+    /**
+     * Returns the path in the Explorer Tree.
+     * It will return either 'path' (the first parameter), or the path resolved
+     * to the 'importSettings' Root DocRef if that exists.
+     * @param path The path to the item, deduced from the import data.
+     * @param importRootDocRef The setting from ImportSettings the holds the
+     *                         optional RootDocRef - i.e. where the stuff on
+     *                         disk should be imported to. Will be null if
+     *                         not set.
+     * @return Returns path if the RootDocRef hasn't been set or cannot be
+     * found in the Explorer Tree. Otherwise, returns the path to the
+     * RootDocRef/path.
+     */
+    private String resolvePath(final String path, final DocRef importRootDocRef) {
         String result = path;
-        if (importSettings.getRootDocRef() != null) {
-            final Optional<ExplorerNode> optionalExplorerNode =
-                    explorerNodeService.getNode(importSettings.getRootDocRef());
-            if (optionalExplorerNode.isPresent()) {
-                final ExplorerNode rootNode = optionalExplorerNode.get();
-                final List<ExplorerNode> nodes = explorerNodeService.getPath(importSettings.getRootDocRef());
-                nodes.add(rootNode);
+        if (importRootDocRef != null) {
+            final Optional<ExplorerNode> optImportRootNode =
+                    explorerNodeService.getNode(importRootDocRef);
+            if (optImportRootNode.isPresent()) {
+                final ExplorerNode importRootNode = optImportRootNode.get();
+                final List<ExplorerNode> nodePathToImportRootDocRef = explorerNodeService.getPath(importRootDocRef);
+                nodePathToImportRootDocRef.add(importRootNode);
                 // Remove root node.
 
-                final ExplorerNode root = explorerNodeService.getRoot();
-                if (nodes.get(0).equals(root)) {
-                    nodes.remove(0);
+                final ExplorerNode systemRootNode = explorerNodeService.getRoot();
+                if (nodePathToImportRootDocRef.getFirst().equals(systemRootNode)) {
+                    nodePathToImportRootDocRef.removeFirst();
                 }
-                if (nodes.size() > 0) {
-                    final String rootPath = getParentPath(nodes);
+                if (!nodePathToImportRootDocRef.isEmpty()) {
+                    final String rootPath = getParentPath(nodePathToImportRootDocRef);
                     result = createPath(rootPath, path);
                 }
             }
@@ -484,10 +518,37 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
     public ExportSummary write(final Path dir,
                                final Set<DocRef> docRefs,
                                final boolean omitAuditFields) {
-        // Create a set of all entities that we are going to try and export.
-        final Set<DocRef> expandedDocRefs = expandDocRefSet(docRefs);
+        Set<String> docTypesToIgnore = Collections.emptySet();
+        return this.write(null, dir, docRefs, docTypesToIgnore, omitAuditFields);
+    }
 
-        if (expandedDocRefs.size() == 0) {
+    /**
+     * Method for exporting; specific to GitRepo exports. Also called by write()
+     * above for other exports.
+     * @param rootNodePath     Path to root node of the export. If null then
+     *                         performs the same as the other write() method.
+     *                         Otherwise removes these path elements from the start of
+     *                         the exported path. Normally this should be the path to the
+     *                         GitRepo node, including that node.
+     * @param dir              Where to serialize the DocRef items to on disk.
+     * @param docRefs          Set of the DocRefs to serialize.
+     * @param docTypesToIgnore Set of the Doc types that shouldn't be exported, nor
+     *                         their children. Must not be null.
+     * @param omitAuditFields  Do not export audit fields.
+     * @return The summary of the export.
+     */
+    @Override
+    public ExportSummary write(final List<ExplorerNode> rootNodePath,
+                               final Path dir,
+                               final Set<DocRef> docRefs,
+                               final Set<String> docTypesToIgnore,
+                               final boolean omitAuditFields) {
+
+        Objects.requireNonNull(docTypesToIgnore);
+
+        // Create a set of all entities that we are going to try and export.
+        final Set<DocRef> expandedDocRefs = expandDocRefSet(docRefs, docTypesToIgnore);
+        if (expandedDocRefs.isEmpty()) {
             throw new EntityServiceException("No documents were found that could be exported");
         }
 
@@ -495,8 +556,8 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
         final List<Message> messageList = new ArrayList<>();
         for (final DocRef docRef : expandedDocRefs) {
             try {
-                LOGGER.debug("Exporting {} to {}, omitAuditFields: {}", docRef, dir, omitAuditFields);
-                performExport(dir, docRef, omitAuditFields, messageList);
+                LOGGER.debug("Exporting '{}' to '{}', omitAuditFields: '{}'", docRef, dir, omitAuditFields);
+                performExport(rootNodePath, dir, docRef, omitAuditFields, messageList);
                 exportSummary.addSuccess(docRef.getType());
             } catch (final IOException | RuntimeException e) {
                 messageList.add(new Message(Severity.ERROR,
@@ -516,11 +577,11 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
         final String[] elements = path.split("/");
 
         for (final String element : elements) {
-            if (element.length() > 0) {
+            if (!element.isEmpty()) {
                 List<ExplorerNode> nodes = explorerNodeService.getNodesByName(parent, element);
-                nodes = nodes.stream().filter(n -> FOLDER.equals(n.getType())).toList();
+                nodes = nodes.stream().filter(ExplorerConstants::isFolder).toList();
 
-                if (nodes.size() == 0) {
+                if (nodes.isEmpty()) {
                     // No parent node can be found for this element so create one if possible.
                     final DocRef folderRef = new DocRef(parent.getType(), parent.getUuid(), parent.getName());
                     if (!securityContext.hasDocumentCreatePermission(folderRef, FOLDER)) {
@@ -539,7 +600,7 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
                     }
 
                 } else {
-                    parent = nodes.get(0);
+                    parent = nodes.getFirst();
                 }
             }
         }
@@ -547,26 +608,47 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
         return parent;
     }
 
-    private Set<DocRef> expandDocRefSet(final Set<DocRef> set) {
+    private Set<DocRef> expandDocRefSet(final Set<DocRef> set,
+                                        final Set<String> docTypesToIgnore) {
         final Set<DocRef> expandedDocRefs = new HashSet<>();
 
         if (set == null) {
             // If the set is null then add the whole tree of exportable items.
-            addDescendants(null, expandedDocRefs);
+            addDescendants(null, expandedDocRefs, docTypesToIgnore);
         } else {
             for (final DocRef docRef : set) {
-                addDocRef(docRef, expandedDocRefs);
-                addDescendants(docRef, expandedDocRefs);
+                if (!docTypesToIgnore.contains(docRef.getType())) {
+                    addDocRef(docRef, expandedDocRefs);
+                    addDescendants(docRef, expandedDocRefs, docTypesToIgnore);
+                }
             }
         }
 
         return expandedDocRefs;
     }
 
-    private void addDescendants(final DocRef docRef, Set<DocRef> expandedDocRefs) {
-        final List<ExplorerNode> descendants = explorerNodeService.getDescendants(docRef);
-        for (final ExplorerNode descendant : descendants) {
-            addDocRef(descendant.getDocRef(), expandedDocRefs);
+    /**
+     * Called recursively to add things to the set of Docs to export.
+     * @param docRef The root docref
+     * @param expandedDocRefs The output of the function
+     * @param docTypesToIgnore Any types of doc to ignore and not recurse below.
+     */
+    private void addDescendants(final DocRef docRef,
+                                final Set<DocRef> expandedDocRefs,
+                                final Set<String> docTypesToIgnore) {
+
+        final List<ExplorerNode> children = explorerNodeService.getChildren(docRef);
+        for (final var child : children) {
+            if (ExplorerConstants.isFolder(child)) {
+                if (!docTypesToIgnore.contains(child.getType())) {
+                    this.addDocRef(child.getDocRef(), expandedDocRefs);
+                    this.addDescendants(child.getDocRef(), expandedDocRefs, docTypesToIgnore);
+                }
+            } else {
+                if (!docTypesToIgnore.contains(child.getType())) {
+                    this.addDocRef(child.getDocRef(), expandedDocRefs);
+                }
+            }
         }
     }
 
@@ -591,10 +673,42 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
         }
     }
 
-    private void performExport(final Path dir,
+    /**
+     * Prunes the node path for GitRepo exports. Removes everything in the rootPath
+     * from the nodePath if the rootPath matches the start of the nodePath.
+     * @param rootPath Can be null, in which case this function just returns nodePath.
+     *                 Otherwise, the list of items to prune from the start of nodePath.
+     * @param nodePath The node path to prune.
+     * @return The pruned nodePath.
+     */
+    private List<ExplorerNode> pruneNodePath(final List<ExplorerNode> rootPath,
+                                             final List<ExplorerNode> nodePath) {
+        List<ExplorerNode> resultPath = nodePath;
+
+        if (rootPath != null) {
+            List<String> rootUuids = rootPath.stream()
+                    .map(ExplorerNode::getUuid)
+                    .toList();
+            List<String> nodeUuids = nodePath.stream()
+                    .map(ExplorerNode::getUuid)
+                    .limit(rootPath.size())
+                    .toList();
+            if (rootUuids.equals(nodeUuids)) {
+                resultPath = nodePath.subList(rootPath.size(), nodePath.size());
+            } else {
+                LOGGER.warn("Node path '{}' does not start with the root path '{}'", nodePath, rootPath);
+            }
+        }
+
+        return resultPath;
+    }
+
+    private void performExport(final List<ExplorerNode> rootNodePath,
+                               final Path dir,
                                final DocRef initialDocRef,
                                final boolean omitAuditFields,
                                final List<Message> messageList) throws IOException {
+
         final ImportExportActionHandler importExportActionHandler = importExportActionHandlers.getHandler(
                 initialDocRef.getType());
         final List<Message> localMessageList = new ArrayList<>();
@@ -607,10 +721,8 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
             final DocRef explorerDocRef;
             final ExplorerNode explorerNode;
             final DocRef docRef;
-            if (importExportActionHandler instanceof NonExplorerDocRefProvider) {
-
+            if (importExportActionHandler instanceof NonExplorerDocRefProvider docRefProvider) {
                 // Find the closest DocRef to this one to give a location to export it.
-                NonExplorerDocRefProvider docRefProvider = (NonExplorerDocRefProvider) importExportActionHandler;
                 explorerDocRef = docRefProvider.findNearestExplorerDocRef(initialDocRef);
 
                 if (explorerDocRef == null) {
@@ -637,11 +749,17 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
             try {
                 // Get the explorer path to this doc ref.
                 List<ExplorerNode> path = explorerNodeService.getPath(explorerDocRef);
-                List<String> pathElements = path.stream()
-                        .filter(p -> ExplorerConstants.FOLDER_TYPE.equals(p.getType()))
-                        .map(ExplorerNode::getName).toList();
+
+                // Check if we've specified a non-system root for the export
+                // If we have then remove everything down to that root
+                if (rootNodePath != null) {
+                    path = this.pruneNodePath(rootNodePath, path);
+                }
 
                 // Turn the path into a list of strings but ignore any nodes that aren't folders, e.g. the root.
+                List<String> pathElements = path.stream()
+                        .filter(ExplorerConstants::isFolder)
+                        .map(ExplorerNode::getName).toList();
 
                 // Create directories for the path if not already created by another entity.
                 final Path parentDir = createDirs(dir, pathElements);
@@ -760,14 +878,14 @@ class ImportExportSerializerImpl implements ImportExportSerializer {
     }
 
     private String createPath(final String parent, final String child) {
-        if (parent == null || parent.length() == 0) {
+        if (parent == null || parent.isEmpty()) {
             return child;
         }
         return parent + "/" + child;
     }
 
     private String getParentPath(final List<ExplorerNode> parents) {
-        if (parents != null && parents.size() > 0) {
+        if (parents != null && !parents.isEmpty()) {
             String parentPath = parents.stream()
                     .map(ExplorerNode::getName)
                     .collect(Collectors.joining("/"));
